# app/server/authHandlers.go
@@ -11,9 +11,22 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-type tokenResponse struct {
-	UserRole any    `json:"user_role"`
-	Token    string `json:"token"`
+type UserLoginReq struct {
+	SessionId             string    `json:"session_id"`
+	AccessToken           string    `json:"access_token"`
+	RefreshToken          string    `json:"refresh_token"`
+	AccessTokenExpiresAt  time.Time `json:"access_token_expires_at"`
+	RefreshTokenExpiresAt time.Time `json:"refresh_token_expires_at"`
+	UserId                int32     `json:"user_id"`
+}
+
+type RenewAccessTokenReq struct {
+	RefreshToken string `json:"refresh_token"`
+}
+
+type RenewAccessTokenRes struct {
+	RefreshToken         string    `json:"refresh_token"`
+	AccessTokenExpiresAt time.Time `json:"access_token_expires_at"`
 }
 
 // @Summary      Register a new user (Doctor or Patient)
@@ -69,11 +82,12 @@ func (s *FiberServer) Register(ctx *fiber.Ctx) error {
 // @Accept			json
 // @Produce		json
 // @Param			login body models.Auth true "Login credentials"
-// @Success		200 {object} tokenResponse "Login successful, returns JWT token"
+// @Success		200 {object} UserLoginReq "Login successful, returns JWT token"
 // @Failure		204 {string} string "Invalid credentials for user login"
 // @Failure		500 {string} string "Internal server error"
 // @Router			/login [post]
 func (s *FiberServer) Login(ctx *fiber.Ctx) error {
+
 	auth := models.Auth{}
 
 	err := ctx.BodyParser(&auth)
@@ -82,7 +96,7 @@ func (s *FiberServer) Login(ctx *fiber.Ctx) error {
 		return ctx.Status(500).SendString(fmt.Sprintf("Error: %s", err.Error()))
 	}
 
-	userDetails, err := s.db.DB().UserLogin(context.Background(), auth.UserName)
+	userDetails, err := s.db.DB().UserLogin(s.ctx, auth.UserName)
 	if err != nil {
 		return ctx.Status(http.StatusNotFound).SendString(fmt.Sprintf("Error %s", err.Error()))
 	}
@@ -93,24 +107,154 @@ func (s *FiberServer) Login(ctx *fiber.Ctx) error {
 		return ctx.Status(fiber.StatusNoContent).SendString("Invalid credentials for user login")
 	}
 
-	duration := time.Minute * 30
-	token, _, err := s.token.CreateToken(auth.UserName, string(userDetails.UserRole), duration)
+	var userRole = string(userDetails.UserRole)
+	token, claims, err := s.token.CreateToken(userDetails.ID, userRole, time.Minute*15)
 	if err != nil {
 		return ctx.Status(500).SendString(fmt.Sprintf("Error %s", err.Error()))
 	}
+
+	refreshToken, refreshClaims, err := s.token.CreateToken(userDetails.ID, userRole, time.Hour*9)
+	if err != nil {
+		return ctx.Status(500).SendString(fmt.Sprintf("Error %s", err.Error()))
+	}
+
+	sn := models.Session{
+		Id:           refreshClaims.RegisteredClaims.ID,
+		UserId:       userDetails.ID,
+		UserRole:     userRole,
+		RefreshToken: refreshToken,
+		IsRevoked:    false,
+		CreatedAt:    time.Now(),
+		ExpiresAt:    refreshClaims.RegisteredClaims.ExpiresAt.Time,
+	}
+
+	session := models.CreateSession(sn)
+	s.db.DB().InsertSession(s.ctx, session)
 
 	ctx.Cookie(&fiber.Cookie{
 		Name:     "jwt",
 		Value:    token,
 		HTTPOnly: true,
-		MaxAge:   60 * 30,
+		Expires:  time.Now().Add(time.Minute * 15),
 	})
 
 	return ctx.Status(201).JSON(
-		tokenResponse{
-			UserRole: userDetails.UserRole,
-			Token:    token,
+		UserLoginReq{
+			SessionId:             session.ID,
+			AccessToken:           token,
+			RefreshToken:          refreshToken,
+			AccessTokenExpiresAt:  claims.RegisteredClaims.ExpiresAt.Time,
+			RefreshTokenExpiresAt: refreshClaims.ExpiresAt.Time,
+			UserId:                session.UserID,
 		})
 }
 
-// ---@@@Security ApiKeyAuth
+// @Summary		When a logged in user want to logout
+// @Description Logs out the user that is currently logged in
+// @Tags		Logout
+// @Produce 	json
+// @Param 		logout path int true "Path Variable"
+// @Success 	204 {string} string "No Content"
+// @Failure 	400 {string} string "Bad Request: Missing Id"
+// @Failure 	500 {string} string "Internal Server Error: when deleting session"
+// @Router 	/logout [delete]
+func (s *FiberServer) Logout(ctx *fiber.Ctx) error {
+
+	sessionId := ctx.Params("id", "")
+
+	if sessionId == "" {
+
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": fmt.Sprintf("missing session id %v", fiber.ErrBadRequest),
+		})
+	}
+
+	if err := s.db.DB().DeleteSession(s.ctx, sessionId); err != nil {
+		return ctx.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": fmt.Sprintf("Err deleting the session%v", fiber.ErrInternalServerError),
+		})
+	}
+
+	return ctx.SendStatus(fiber.StatusNoContent)
+}
+
+// @Summary		Renew user token
+// @Description Logged in users can use to get a new session token
+// @Produce 	json
+// @Tags		RenewToken
+// @Param 		RenewToken body RenewAccessTokenReq true "access token request"
+// @Success 	200 {object} RenewAccessTokenRes "Success"
+// @Failure 	400 {string} string "Bad Request"
+// @Failure 	401 {string} string "Un Authorized"
+// @Failure 	500 {string} string "Internal Server Error: when deleting session"
+// @Router 	/renew/token [post]
+func (s *FiberServer) RenewAccessToken(ctx *fiber.Ctx) error {
+
+	refreshToken := RenewAccessTokenReq{}
+
+	err := ctx.BodyParser(&refreshToken)
+
+	if err != nil {
+		return ctx.Status(fiber.StatusBadRequest).SendString(fmt.Sprintf("error decoding token: %s", err.Error()))
+	}
+
+	refreshClaims, err := s.token.VerifyToken(refreshToken.RefreshToken)
+
+	if err != nil {
+		return ctx.Status(fiber.StatusUnauthorized).SendString(fmt.Sprintf("error verifying token: %s", err.Error()))
+	}
+
+	session, err := s.db.DB().GetSession(s.ctx, refreshClaims.RegisteredClaims.ID)
+
+	if err != nil {
+		return ctx.Status(fiber.StatusInternalServerError).SendString(fmt.Sprintf("error getting session: %s", err.Error()))
+	}
+
+	if session.UserID != refreshClaims.UserId {
+		return ctx.Status(fiber.StatusUnauthorized).SendString(fmt.Sprintf("Invalid session: %s", err.Error()))
+	}
+
+	token, claims, err := s.token.CreateToken(refreshClaims.UserId, refreshClaims.UserRole, 15*time.Minute)
+
+	if err != nil {
+		return ctx.Status(fiber.StatusInternalServerError).SendString(fmt.Sprintf("error creating token: %s", err.Error()))
+	}
+
+	res := RenewAccessTokenRes{
+		RefreshToken:         token,
+		AccessTokenExpiresAt: claims.RegisteredClaims.ExpiresAt.Time,
+	}
+
+	return ctx.Status(fiber.StatusOK).JSON(res)
+}
+
+// @Summary		When a logged in user want to revoke their session
+// @Description Logs out the user that is currently logged in
+// @Tags		RevokeSession
+// @Produce 	json
+// @Param 		RevokeSession path int true "Path Variable"
+// @Success 	204 {string} string "No Content"
+// @Failure 	400 {string} string "Bad Request: Missing Id"
+// @Failure 	500 {string} string "Internal Server Error: when deleting session"
+// @Router 		/revoke/token [delete]
+func (s *FiberServer) RevokeSession(ctx *fiber.Ctx) error {
+
+	sessionId := ctx.Params("id", "")
+
+	if sessionId == "" {
+
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": fmt.Sprintf("missing session id %v", fiber.ErrBadRequest),
+		})
+	}
+
+	if err := s.db.DB().RevokeSession(s.ctx, sessionId); err != nil {
+		return ctx.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": fmt.Sprintf("Err revoking the session%v", fiber.ErrInternalServerError),
+		})
+	}
+
+	return ctx.SendStatus(fiber.StatusNoContent)
+}
+
+// change and reset password
